部分前端页面调整

--- a/src/main/resources/templates/outputAnalysis.html
+++ b/src/main/resources/templates/outputAnalysis.html
@@ -20,7 +20,9 @@
     <script src="../static/js/graph/outputAnalysis.js"></script>
 </head>
 
-<body data-sidebar="dark" class="bgc">
+
+<body data-sidebar="dark" class="bgc"><!-- Begin page -->
+<div data-sidebar="dark" class="bgc">
 <!-- Begin page -->
 <div id="layout-wrapper">
 
@@ -131,6 +133,8 @@
 
 
 </div>
+</div>
+</div>
 
 
 
@@ -156,6 +160,7 @@
 <script src="../static/libs/datatables.net-responsive-bs4/js/responsive.bootstrap4.min.js"></script>
 <script src="../static/js/pages/dashboard.init.js"></script>
 <script src="../static/js/app.js"></script>
+
 
 </body>
 
