部分前端页面调整

--- a/src/main/resources/templates/OEE.html
+++ b/src/main/resources/templates/OEE.html
@@ -49,20 +49,20 @@
                 <div class="row" >
                     <div class="card" style="width:23%; height: 50px; margin: 1%">
                         <div class="card-body">
-                            <div class="text-center h5"><span>OP40-机床当前OEE为210</span></div>
+                            <div class="text-center h5"><span>OP40-机床当前OEE为75%</span></div>
                         </div>
                     </div>
                     <div class="card" style="width:23%; height: 50px; margin: 1%">
                         <div class="card-body">
-                            <div class="text-center h5"><span>OP50-机床当前OEE为310</span></div>
+                            <div class="text-center h5"><span>OP50-机床当前OEE为82%</span></div>
                         </div>
                     </div><div class="card" style="width:23%; height: 50px; margin: 1%">
                     <div class="card-body">
-                        <div class="text-center h5"><span>OP60-机床当前OEE为410</span></div>
+                        <div class="text-center h5"><span>OP60-机床当前OEE为68%</span></div>
                     </div>
                 </div><div class="card" style="width:23%; height: 50px; margin: 1%">
                     <div class="card-body">
-                        <div class="text-center h5"><span>OP70-机床当前OEE为320</span></div>
+                        <div class="text-center h5"><span>OP70-机床当前OEE为74%</span></div>
                     </div>
                 </div>
                 </div>
@@ -109,7 +109,7 @@
                                 xAxis: {
                                     type: 'category',
                                     boundaryGap: false,
-                                    data: ['3月18日', '3月19日', '3月20日', '3月21日', '3月22日', '3月23日', '3月24日']
+                                    data: ['5月27日', '5月28日', '5月29日', '5月30日', '5月31日', '6月1日', '6月2日']
                                 },
                                 yAxis: {
                                     type: 'value'
@@ -118,22 +118,22 @@
                                     {
                                         name: 'OP40-机床',
                                         type: 'line',
-                                        data: [120, 132, 101, 134, 90, 230, 210]
+                                        data: [62, 72, 83, 75, 72, 65, 85]
                                     },
                                     {
                                         name: 'OP50-机床',
                                         type: 'line',
-                                        data: [220, 182, 191, 234, 290, 330, 310]
+                                        data: [68, 82, 79, 76, 85, 75, 78]
                                     },
                                     {
                                         name: 'OP60-立加',
                                         type: 'line',
-                                        data: [150, 232, 201, 154, 190, 330, 410]
+                                        data: [66, 76, 76, 74, 87, 64, 67]
                                     },
                                     {
                                         name: 'OP70-立加',
                                         type: 'line',
-                                        data: [320, 332, 301, 334, 390, 330, 320]
+                                        data: [76, 85, 76, 84, 70, 85, 76]
                                     }
                                 ]
                             };
