及时状态看板更新

--- a/src/main/resources/templates/instanceStatus.html
+++ b/src/main/resources/templates/instanceStatus.html
@@ -163,6 +163,12 @@
                                     <span class="dripicons-dot"></span>&nbsp;&nbsp;产量计数：<span class="span2">None</span></br>  <hr style="margin: 5px">
 <!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备操控人员：<span class="span2" th:text="${data.get(0).getExternalId()}">职工A</span></br><hr style="margin: 5px">-->
                                     <span class="dripicons-dot"></span>&nbsp;&nbsp;设备地点：<span class="span2" >智能工厂</span></br><hr style="margin: 5px">
+
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;pid：<span class="span2" >bc0d52c6-dfcb-4f92-8e8a-7ff7f70d025c</span></br><hr style="margin: 5px">
+
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;external_id：<span class="span2" >PLC</span></br><hr style="margin: 5px">
+
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;drivename：<span class="span2" >DMP.DeviceDriver.Mitsubish.PLC.MitsubishMCDriver</span></br><hr style="margin: 5px">
 <!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" th:text="${data.get(0).getDrivername()}">1200</span></br><hr style="margin: 5px">-->
 <!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" >None</span></br><hr style="margin: 5px">-->
                                 </div>
@@ -180,6 +186,12 @@
                                     <span class="dripicons-dot"></span>&nbsp;&nbsp;产量计数：<span class="span2" >None</span></br>  <hr style="margin: 5px">
 <!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备操控人员：<span class="span2" th:text="${data.get(0).getExternalId()}">职工B</span></br><hr style="margin: 5px">-->
                                     <span class="dripicons-dot"></span>&nbsp;&nbsp;设备地点：<span class="span2" >智能工厂</span></br><hr style="margin: 5px">
+
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;pid：<span class="span2" >bc0d52c6-dfcb-4f92-8e8a-7ff7f70d025c</span></br><hr style="margin: 5px">
+
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;external_id：<span class="span2" >8161001</span></br><hr style="margin: 5px">
+
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;drivename：<span class="span2" >DMP.DeviceDriver.Mitsubish.PLC.MitsubishMCDriver</span></br><hr style="margin: 5px">
 <!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" th:text="${data.get(0).getDrivername()}">1200</span></br><hr style="margin: 5px">-->
 <!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" >None</span></br><hr style="margin: 5px">-->
                                 </div>
@@ -199,6 +211,12 @@
                                     <span class="dripicons-dot"></span>&nbsp;&nbsp;设备ID：<span class="span2" th:text="${data.get(2).getId()}">00284</span></br><hr style="margin: 5px">
                                     <span class="dripicons-dot"></span>&nbsp;&nbsp;产量计数：<span class="span2" th:text="${op50output}">1004</span></br>  <hr style="margin: 5px">
                                     <span class="dripicons-dot"></span>&nbsp;&nbsp;设备地点：<span class="span2" >智能工厂</span></br><hr style="margin: 5px">
+
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;pid：<span class="span2" >bc0d52c6-dfcb-4f92-8e8a-7ff7f70d025c</span></br><hr style="margin: 5px">
+
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;external_id：<span class="span2" >316234</span></br><hr style="margin: 5px">
+
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;drivename：<span class="span2" >DMP.DeviceDriver.Mazak.SmoothCDriver_New.SmoothCDriver</span></br><hr style="margin: 5px">
 <!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备操控人员：<span class="span2" th:text="${data.get(0).getExternalId()}">职工C</span></br><hr style="margin: 5px">-->
 <!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" >Unknown</span></br><hr style="margin: 5px">-->
 <!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" th:text="${data.get(0).getDrivername()}">1200</span></br><hr style="margin: 5px">-->
@@ -217,6 +235,12 @@
                                     <span class="dripicons-dot"></span>&nbsp;&nbsp;产量计数：<span class="span2" >None</span></br>  <hr style="margin: 5px">
 <!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;产量计数：<span class="span2" th:text="${data.get(0).getPid()}">999</span></br>  <hr style="margin: 5px">-->
                                     <span class="dripicons-dot"></span>&nbsp;&nbsp;设备地点：<span class="span2" >智能工厂</span></br><hr style="margin: 5px">
+
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;pid：<span class="span2" >bc0d52c6-dfcb-4f92-8e8a-7ff7f70d025c</span></br><hr style="margin: 5px">
+
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;external_id：<span class="span2" >PLC-2</span></br><hr style="margin: 5px">
+
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;drivename：<span class="span2" >DMP.DeviceDriver.Mitsubish.PLC.MitsubishMCDriver</span></br><hr style="margin: 5px">
 <!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备操控人员：<span class="span2" th:text="${data.get(0).getExternalId()}">职工D</span></br><hr style="margin: 5px">-->
 <!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" >None</span></br><hr style="margin: 5px">-->
 <!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" th:text="${data.get(0).getDrivername()}">1200</span></br><hr style="margin: 5px">-->
@@ -237,6 +261,12 @@
                                     <span class="dripicons-dot"></span>&nbsp;&nbsp;设备ID：<span class="span2" th:text="${data.get(4).getId()}">00255</span></br><hr style="margin: 5px">
                                     <span class="dripicons-dot"></span>&nbsp;&nbsp;产量计数：<span class="span2" th:text="${op70output}">873</span></br>  <hr style="margin: 5px">
                                     <span class="dripicons-dot"></span>&nbsp;&nbsp;设备地点：<span class="span2" >智能工厂</span></br><hr style="margin: 5px">
+
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;pid：<span class="span2" >bc0d52c6-dfcb-4f92-8e8a-7ff7f70d025c</span></br><hr style="margin: 5px">
+
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;external_id：<span class="span2" >319614</span></br><hr style="margin: 5px">
+
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;drivename：<span class="span2" >DMP.DeviceDriver.Mazak.SmoothCDriver_New.SmoothCDriver</span></br><hr style="margin: 5px">
 <!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备操控人员：<span class="span2" th:text="${data.get(0).getExternalId()}">职工E</span></br><hr style="margin: 5px">-->
 <!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" >Unknown</span></br><hr style="margin: 5px">-->
 <!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" th:text="${data.get(0).getDrivername()}">1200</span></br><hr style="margin: 5px">-->
@@ -254,6 +284,12 @@
                                     <span class="dripicons-dot"></span>&nbsp;&nbsp;设备ID：<span class="span2" th:text="${data.get(5).getId()}">00267</span></br><hr style="margin: 5px">
                                     <span class="dripicons-dot"></span>&nbsp;&nbsp;产量计数：<span class="span2" th:text="${op60output}">944</span></br>  <hr style="margin: 5px">
                                     <span class="dripicons-dot"></span>&nbsp;&nbsp;设备地点：<span class="span2" >智能工厂</span></br><hr style="margin: 5px">
+
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;pid：<span class="span2" >bc0d52c6-dfcb-4f92-8e8a-7ff7f70d025c</span></br><hr style="margin: 5px">
+
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;external_id：<span class="span2" >319615</span></br><hr style="margin: 5px">
+
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;drivename：<span class="span2" >DMP.DeviceDriver.Mazak.SmoothCDriver_New.SmoothCDriver</span></br><hr style="margin: 5px">
 <!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备操控人员：<span class="span2" th:text="${data.get(0).getExternalId()}">职工F</span></br><hr style="margin: 5px">-->
 <!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" >Unknown</span></br><hr style="margin: 5px">-->
 <!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" th:text="${data.get(0).getDrivername()}">1200</span></br><hr style="margin: 5px">-->
@@ -274,6 +310,12 @@
                                     <span class="dripicons-dot"></span>&nbsp;&nbsp;设备ID：<span class="span2" th:text="${data.get(6).getId()}">00247</span></br><hr style="margin: 5px">
                                     <span class="dripicons-dot"></span>&nbsp;&nbsp;产量计数：<span class="span2" th:text="${op40output}">933</span></br>  <hr style="margin: 5px">
                                     <span class="dripicons-dot"></span>&nbsp;&nbsp;设备地点：<span class="span2" >智能工厂</span></br><hr style="margin: 5px">
+
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;pid：<span class="span2" >bc0d52c6-dfcb-4f92-8e8a-7ff7f70d025c</span></br><hr style="margin: 5px">
+
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;external_id：<span class="span2" >316235</span></br><hr style="margin: 5px">
+
+                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;drivename：<span class="span2" >DMP.DeviceDriver.Mazak.SmoothCDriver_New.SmoothCDriver</span></br><hr style="margin: 5px">
 <!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;设备操控人员：<span class="span2" th:text="${data.get(0).getExternalId()}">职工G</span></br><hr style="margin: 5px">-->
 <!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" >Unknown</span></br><hr style="margin: 5px">-->
 <!--                                    <span class="dripicons-dot"></span>&nbsp;&nbsp;计划生产量：<span class="span2 col-md-6" th:text="${data.get(0).getDrivername()}">1200</span></br><hr style="margin: 5px">-->
